# network-inventory

./: .env  .gitignore  Network Inventory.postman_collection.json  Network-Inventory.postman_collection.json  README.md  docker-compose-arista.yml  docker-compose.yml
catalog-connector/: Dockerfile  generate-bindings.sh  pyproject.toml
catalog-connector/catalog_connector/: loader.py  main.py
catalog-connector/catalog_connector/clients/: ngsi_ld.py  yang_catalog.py
catalog-connector/catalog_connector/models/ngsi_ld/: catalog.py  entity.py
catalog-connector/catalog_connector/models/yang/: yang_catalog.py
catalog-connector/tests/: test_catalog_connector.py
ceos-arista/: ceos-startup.sh
ceos-arista/ceos-startup-config/: gnmi-config-ceos2  (+2 more)
context-catalog/: catalog-context.jsonld  context.jsonld  platform-context.jsonld
platform-registry/: Dockerfile  docker-entrypoint.sh  pyproject.toml  sandbox-yang-library.xml
platform-registry/examples/: cisco-yang-library-2019.xml  huawei-yang-library-2016.xml  nokia-yang-library-2016.xml  nokia-yang-library-2019.xml
platform-registry/platform_registry/: gnmi_legacy.py  legacy.py  loader.py  main.py  netconf_legacy.py  registry.py  yang-library.py
platform-registry/platform_registry/clients/: ngsi_ld.py
platform-registry/platform_registry/config/: log.yaml
platform-registry/platform_registry/models/: rest.py
platform-registry/platform_registry/models/ngsi_ld/: catalog.py  platform.py
platform-registry/platform_registry/netconf_filters/: netconf-state.xml  yang-library-rfc7895.xml  yang-library-rfc8525.xml
platform-registry/tests/: test_platform_registry.py
(+2 files in other folders)
