[tool.poetry]
name = "catalog-connector"
version = "0.1.1"
description = ""
authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]

[tool.poetry.dependencies]
python = "^3.9"
pyangbind = "^0.8.1"
requests = "^2.27.1"
pydantic = "^1.9.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
