[tool.poetry]
name = "platform-registry"
version = "0.1.0"
description = ""
authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]

[tool.poetry.dependencies]
python = "^3.8"
pygnmi = "^0.6.8"
requests = "^2.27.1"
pydantic = "^1.9.0"
ncclient = "^0.6.12"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
PyYAML = "^6.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
